--- a/pages/movieDetails.html
+++ b/pages/movieDetails.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Details</title>
-    <link rel="stylesheet" href="styles/movieDetails.css">
+    <link rel="stylesheet" href="../styles/movieDetails.css">
 </head>
 <body>
     <div class="detailContainer">
@@ -13,4 +13,4 @@
     </div>
 </body>
 </html>
-<script src="scripts/movieDetails.js"></script>
+<script src="../scripts/movieDetails.js"></script>
