--- a/pages/movies.html
+++ b/pages/movies.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movies</title>
-    <link rel="stylesheet" href="./styles/movies.css" />
+    <link rel="stylesheet" href="../styles/movies.css" />
   </head>
 
   <body>
@@ -31,4 +31,4 @@
     </div>
   </body>
 </html>
-<script src="./scripts/movies.js"></script>
+<script src="../scripts/movies.js"></script>
