--- a/pages/seats.html
+++ b/pages/seats.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./styles/seats.css" />
+    <link rel="stylesheet" href="../styles/seats.css" />
     <title>Movie Seat Booking</title>
   </head>
   <body>
@@ -36,8 +36,8 @@
     <p class="text">
       You have selected <span id="count">0</span> seats for a price of $<span id="total">0</span>
     </p>
-    <button><a href="payment.html" target="_blank" rel="noopener noreferrer">PayNow</a></button>
+    <button><a href="../pages/payment.html" target="_blank" rel="noopener noreferrer">PayNow</a></button>
 
-    <script src="./scripts/seats.js"></script>
+    <script src="../scripts/seats.js"></script>
   </body>
 </html>
