--- a/pages/otp.html
+++ b/pages/otp.html
@@ -13,4 +13,4 @@
     <button id="cnfrm">Submit</button>
 </body>
 </html>
-<script src="../scripts/otp.js"></script>
+<script type="module" src="../scripts/otp.js"></script>
