--- a/pages/seats.html
+++ b/pages/seats.html
@@ -36,8 +36,7 @@
     <p class="text">
       You have selected <span id="count">0</span> seats for a price of $<span id="total">0</span>
     </p>
-    <button><a href="../pages/payment.html" target="_blank" rel="noopener noreferrer">PayNow</a></button>
-
-    <script src="../scripts/seats.js"></script>
+    <button><a href="../pages/payment.html" target="_blank" rel="noopener noreferrer">PayNow</a></button> 
   </body>
 </html>
+<script type="module" src="../scripts/seats.js"></script>
