--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <br>
       <button id="login">LOG IN</button>
     </form>
-    <h4>Don't have an account ? <a href="signup.html">Sign Up</a></h4>
+    <h4>Don't have an account ? <a href="./pages/signup.html">Sign Up</a></h4>
   </div>
-    <script src="./scripts/login.js"></script>
+    <script type="module" src="./scripts/login.js"></script>
   </body>
 </html>
