--- a/pages/movieDetails.html
+++ b/pages/movieDetails.html
@@ -13,4 +13,4 @@
     </div>
 </body>
 </html>
-<script src="../scripts/movieDetails.js"></script>
+<script type="module" src="../scripts/movieDetails.js"></script>
