--- a/pages/movies.html
+++ b/pages/movies.html
@@ -31,4 +31,4 @@
     </div>
   </body>
 </html>
-<script src="../scripts/movies.js"></script>
+<script type="module" src="../scripts/movies.js"></script>
