--- a/pages/signup.html
+++ b/pages/signup.html
@@ -25,4 +25,4 @@
     </div>
   </body>
 </html>
-<script src="../scripts/signup.js"></script>
+<script type="module" src="../scripts/signup.js"></script>
