--- a/pages/movies.html
+++ b/pages/movies.html
@@ -11,14 +11,14 @@
   <body>
     <div id="sort-filter">
       <!--Sorting -->
-      <select id="sortrating" onchange="ratingsort()">
+      <select id="sortrating">
         <option value="">Sort by IMDB</option>
         <option value="htl">High to Low</option>
         <option value="lth">Low to High</option>
       </select>
 
       <!-- Filtering -->
-      <select id="filtergenre" onchange="filtermovies()">
+      <select id="filtergenre">
         <option value="">Filter by Genre</option>
         <option value="Action">Action</option>
         <option value="Thriller">Thriller</option>
