--- a/pages/otp.html
+++ b/pages/otp.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Enter the OTP recieved </h1>
     <input id="code" type="text"><br>
-    <button id="cnfrm">Submit</button>
+    <button id="confirm">Submit</button>
 </body>
 </html>
 <script type="module" src="../scripts/otp.js"></script>
