--- a/pages/signup.html
+++ b/pages/signup.html
@@ -19,7 +19,7 @@
         <label for="">Phone Number</label><br />
         <input id="number" type="number"  minlength="10" placeholder="Enter Your Phone Number" /><br />
         <label for="">Password</label><br />
-        <input id="password" type="text" placeholder="Enter Password" /><br />
+        <input id="password" type="password" placeholder="Enter Password" /><br />
         <button id="btn">SIGN UP</button>
       </form>
     </div>
